# server-side_coursework

./: .clang-format  CMakeLists.txt  README.md
src/: main.cpp
src/common/: config.h
src/connection/: connection_utils.cpp  connection_utils.h
src/server/: server.h
src/session/: client_session.cpp  client_session.h
src/sockets/: socket_utils.cpp  socket_utils.h
src/winsock/: winsock_utils.cpp  winsock_utils.h
test/: basic_test.cpp
